force-app/main/default/objects/Donor__c/fields/Donar_Status__c.field-meta.xml
<CustomField>
    <fullName>Donar_Status__c</fullName>
    <label>Donor Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>