force-app/main/default/objects/Donor__c/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <formula>IF(
    Total_Donations__c &gt;= 500000,
    &quot;⭐⭐⭐⭐⭐&quot;,
    IF(
        Total_Donations__c &gt;= 300000,
        &quot;⭐⭐⭐⭐&quot;,
        IF(
            Total_Donations__c &gt;= 100000,
            &quot;⭐⭐⭐&quot;,
            IF(
                Total_Donations__c &gt;= 50000,
                &quot;⭐⭐&quot;,
                IF(
                    Total_Donations__c &gt; 0,
                    &quot;⭐&quot;,
                    &quot;&quot;
                )
            )
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rating</label>
    <type>Text</type>
</CustomField>