force-app/main/default/objects/Donor__c/fields/Total_Donation_Count__c.field-meta.xml
<CustomField>
    <fullName>Total_Donation_Count__c</fullName>
    <label>Total Donation Count</label>
    <summaryForeignKey>Donation__c.Donor__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>