force-app/main/default/objects/Donor__c/validationRules/Vali_dphone_number.validationRule-meta.xml
<ValidationRule>
    <fullName>Vali_dphone_number</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(
REGEX(
Phone__c,
&quot;^[0-9]{10}$&quot;
)
)</errorConditionFormula>
    <errorMessage>Phone number should be Valid!!</errorMessage>
</ValidationRule>