force-app/main/default/objects/Donor__c/listViews/donor_by_type.listView-meta.xml
<ListView>
    <fullName>donor_by_type</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>donor by type</label>
</ListView>